--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.0.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
